# supergene-v2

./: .gitignore  package.json  pyproject.toml  supergene.code-workspace  supergene_words.txt  x.py
backups/2022-09-06_19:55:34_SUPERFORGE/SUPERGENE/: epubmetadata.metadata.json  metadata.metadata.json
backups/2022-09-06_20:06:58_SUPERFORGE/SUPERGENE/: book.bson  defaultdoc.bson
backups/2022-09-06_20:08:50_SUPERFORGE/SUPERGENE/: chapter.metadata.json  metadata.bson  titlepage.bson
backups/2022-09-06_21:35:02_SUPERFORGE/SUPERGENE/: section.bson
backups/2022-09-08_14:42:10_SUPERFORGE/SUPERGENE/: defaultdoc.metadata.json
backups/2022-09-08_21:07:21_SUPERFORGE/SUPERGENE/: book.metadata.json
backups/SUPERGENE/: book.bson  book.metadata.json  chapter.metadata.json  coverpage.metadata.json  default.bson  default.metadata.json  endofbook.metadata.json  epubmetadata.metadata.json  metadata.metadata.json  section.metadata.json  titlepage.metadata.json
books/book01/: section-01.html  sg1.yaml
books/book02/: section-02.html  sg2.yaml
books/book03/: sg3.yaml  sg3.yml
books/book04/: sg4.yaml  sg4.yml
books/book05/: sg5.1.yml  sg5.yaml
books/book06/: Book 6 Edits.md  sg6.yaml  sg6.yml
books/book07/: sg7.yaml
books/book08/: sg8.yaml
books/book09/: sg9.yml
books/book10/: sg10.yml
books/test_book_dir/: gem_mmd_reference.md
json/: color_themes.json  run.json  theme.json  toc.json
notion/: dev@maxludden_sig.html  max@maxludden_sig.html  page_props.py  upload.py
notion/chapters/: chapters_read.json  example.json
src/: atlas.py  book.py  chapter.py  color.py  cover.py  default.py  edit.py  endofbook.py  epubmetadata.py  inspect.py  log.py  main.py  max_rich.py  metadata.py  mrich.py  myaml.py  panel.py  panel_factory.py  richdantic.py  routes.py  section.py  titlepage.py
src/json/: run.json
src/models/: chapter.py
styles/: style.css
supergene/: realm_config.json
supergene/auth/: custom_user_data.json
tasks/: add_fifth.py  ansi_colors.py  auto.py  backup.py  book_tasks.py  color.py  cover.py  default_tasks.py  download_chapter.py  gradient.py  hr.py  html.py  md.py  onamona.py  pandoc.py  part_two_chapters.py  pixy.py  pushover.py  read_text.py  section.py  tags.py  text.py  titlepage_tasks.py  update_css.py  update_paths.py  write_text.py
yaml/: color_themes.yml  sg1.yml  sg10.yaml  sg10.yml  sg2.yml  sg4.yml  sg5.yml  sg6.yml  sg7.yml  sg8.yaml  sg8.yml  sg9.yml
(+7111 files in other folders)
