[tool.poetry]
name = "supergene"
version = "0.1.0"
description = "A library to automate the scraping, editing, formatting of the webnovel `Super Gene` into ePub ebooks."
authors = ["Max Ludden <dev@maxludden.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.24.2"
tqdm = "^4.64.1"
num2words = "^0.5.12"
requests = "^2.28.1"
bs4 = "^0.0.1"
selenium = "^4.4.3"
sh = "^1.14.3"
loguru = "^0.6.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
mongo-types = "^0.15.1"
ujson = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
